--- a/views/home-guest.ejs
+++ b/views/home-guest.ejs
@@ -2,9 +2,7 @@
 
 <div class="container py-md-5">
 
-  <% errors.forEach(function(message) { %>
-    <div class="alert alert-danger text-center"><%= message %></div>
-  <% }) %>
+  <%- include('includes/flash') %>
 
   <div class="row align-items-center">
     <div class="col-lg-7 py-3 py-md-5">
@@ -33,6 +31,7 @@
             <input name="password" id="password-register" class="form-control" type="password" placeholder="Create a password">
           </div>
           
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>">
           <button type="submit" class="py-3 mt-4 btn btn-lg btn-success btn-block">Sign up for OurApp</button>
           
         </form>
